# workers

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: archive.rs  archive_cleanup.rs
examples/stress_test/: Cargo.toml  README.md
examples/stress_test/src/: jobs.rs  main.rs
migrations/: 001_create_background_jobs.sql  002_create_archived_jobs.sql
src/: background_job.rs  cleaner.rs  errors.rs  job_registry.rs  lib.rs  runner.rs  schema.rs  storage.rs  util.rs  worker.rs
tests/: cli.rs  runner.rs
